Added KeySelectionBehaviour; Other minor changes.